--- a/src/main/webapp/macro/sidebar.vm
+++ b/src/main/webapp/macro/sidebar.vm
@@ -97,7 +97,7 @@
 	"$context/style/images/tag.png" 
 	$null 
 	"#sidebarTagPaletteTools()")
-#set ($paletteViewType = $utils.getUiState($session, "sidebar-tag-palette.viewType", "tree"))
+#set ($paletteViewType = $utils.getUiState($session, "sidebar-tag-palette.viewType", "cloud"))
 #set ($heightKey = "sidebar-tag-palette-height")
 #set ($paletteHeight = $utils.getWithDefault($session, $heightKey, "null"))
 <script type="text/javascript">
