--- a/src/main/webapp/macro/fragment-parts.vm
+++ b/src/main/webapp/macro/fragment-parts.vm
@@ -93,8 +93,8 @@
     title="$messages.get("open-as-document")">
   <img src="$context/images/document.png" border="0" alt="$messages.get("document")"/></a>
 
-  <a class="tool-button" href="#" target="_blank"
-    title="Share fragment">
+
+  <a class="tool-button" href="/export/?$fragment.id" title="Share fragment">
   <img src="$context/style/images/share.png" border="0" alt="Share fragment"/></a>
     
 
@@ -115,7 +115,7 @@
   <a class="tool-button" href="#" 
     title="$messages.get("tag-as-bookmark")"
     onclick="piggydb.command.addTag('$fragment.id', '$tagConstants.NAME_BOOKMARK'); return false;">
-  <img src="$context/style/images/tag-bookmark.png" border="0" alt="$messages.get("bookmark")"/></a>
+    <img src="$context/style/images/tag-bookmark.png" border="0" alt="$messages.get("bookmark")"/></a>
 #end
 
 #if (!$user.isViewer() && !$fragment.isHome())
